# Rust-todo

./: Cargo.toml
src/: main.rs  routes.rs  store.rs  task.rs
src/templates/: index.html.tera
